lib/kitt/tmpl/apps/kyso-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __APP__-ingress
  namespace: __NAMESPACE__
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "__FORCE_SSL_REDIRECT__"
  labels:
    app.kubernetes.io/name: __APP__
spec:
  ingressClassName: nginx
  rules:
# BEG: HOSTNAME_RULE
  - host: '__HOSTNAME__'
    http:
      paths:
      - backend:
          service:
            name: __APP__-svc
            port:
              number: 80
        path: __PATH_PREFIX__
        pathType: Prefix
# END: HOSTNAME_RULE
  tls:
# BEG: HOSTNAME_TLS
  - hosts:
    - '__HOSTNAME__'
    secretName: '__HOSTNAME__'
# END: HOSTNAME_TLS
